--- a/src/redturtle/agidtheme/theme/sass/components/_tiles_views.scss
+++ b/src/redturtle/agidtheme/theme/sass/components/_tiles_views.scss
@@ -6,6 +6,12 @@ $aree-tematiche-gutter: 50px;
     #viewlet-below-content {
         display: none;
     }
+    .tile-container,
+    .existing-content-tile,
+    .aree-tematiche-collection,
+    [class*='collection-container'] {
+        @include clearfix;
+    }
 }
 
 .template-homepage_view,
